--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "path-browserify": "^1.0.1"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.8.0",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   }
